# infofond_projet

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
rapport_latex/: Question1.tex  Question2.tex  Question3.tex  Question4.tex  Question5.tex  Question6.tex  Question7.tex  Question8.tex  main.tex
src/: old_project.py  project.py  tests.py  utils.py
